# sc2mpd

./: Makefile.am  README.asc  configure.ac  ohbuild.sh
debian/: changelog  rules
mpd2src/: scmakempdsender
sc2src/: alsadirect.cpp  conf_post.h  config.h.in  httpgate.cpp  rcvqueue.h  sc2mpd.cpp
